@@ -7,14 +7,13 @@ import mods.thecomputerizer.theimpossiblelibrary.util.client.GuiUtil;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.network.chat.contents.LiteralContents;
 import net.minecraft.resources.ResourceLocation;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
 import java.util.Objects;
 import java.util.function.BiConsumer;
+import java.util.stream.Collectors;
 
 public class RadialButton extends AbstractRadialButton {
     private final List<Component> tooltipLines;
@@ -29,7 +28,7 @@ public class RadialButton extends AbstractRadialButton {
                         BiConsumer<Screen, RadialButton> onClick) {
         super(new Vector4f(0,0,0,255));
         this.handlerFunction = onClick;
-        this.tooltipLines = tooltipLines.stream().map(line -> (Component)MutableComponent.create(new LiteralContents(line))).toList();
+        this.tooltipLines = tooltipLines.stream().map(Component::literal).collect(Collectors.toList());
         this.centerIcon = centerIcon;
         this.altCenterIcon = Objects.isNull(altCenterIcon) ? centerIcon : altCenterIcon;
         this.iconHoverSizeIncrease = hoverIncrease;
@@ -42,7 +41,7 @@ public class RadialButton extends AbstractRadialButton {
 
     public void draw(Vector3f center, float zLevel, Vector3f radius, Vector3f angles,
                      Vector3f mouse, Vector3f relativeCenter, int resolution) {
-        this.centerPos = relativeCenter;
+        setCenterPos(relativeCenter);
         for (int i = 0; i < resolution; i++)
             drawRadialSection(center,zLevel,radius,angles.x(),angles.y()-angles.x(),i,resolution);
     }
@@ -55,14 +54,14 @@ public class RadialButton extends AbstractRadialButton {
                 actualIcon = this.altCenterIcon;
                 hoverIncrease = centerRadius*this.iconHoverSizeIncrease;
             }
-            GuiUtil.bufferSquareTexture(matrix, this.centerPos, centerRadius+hoverIncrease, actualIcon);
+            GuiUtil.bufferSquareTexture(matrix,getCenterPos(),centerRadius+hoverIncrease, actualIcon);
         }
     }
 
     public void drawText(Screen parent, PoseStack matrix, Vector3f mouse, boolean isCurrent) {
-        if(this.centerText!=null) {
+        if(Objects.nonNull(this.centerText)) {
             int color = this.hover ? 16777120 : 14737632;
-            drawCenteredString(matrix, Minecraft.getInstance().font, this.centerText, (int) this.centerPos.x(), (int) this.centerPos.y(), color);
+            drawCenteredString(matrix, Minecraft.getInstance().font, this.centerText, (int)getCenterPos().x(), (int)getCenterPos().y(), color);
         }
         if(this.hover && isCurrent) parent.renderComponentTooltip(matrix, this.tooltipLines, (int) mouse.x(), (int) mouse.y());
     }
