@@ -10,11 +10,9 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiComponent;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.network.chat.contents.LiteralContents;
 import net.minecraft.resources.ResourceLocation;
-
 import org.jetbrains.annotations.Nullable;
+
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
@@ -54,7 +52,7 @@ public class RadialElement extends GuiComponent {
                          float resolution, float hoverIncrease, List<RadialButton> buttons) {
         this.parentScreen = parent;
         this.buttons = buttons;
-        this.centerTooltips = centerTooltips.stream().map(line -> (Component)MutableComponent.create(new LiteralContents(line))).toList();
+        this.centerTooltips = centerTooltips.stream().map(Component::literal).collect(Collectors.toList());
         this.centerIcon = center;
         this.altCenterIcon = Objects.isNull(altCenter) ? center : altCenter;
         this.iconRadius = iconRadius;
@@ -69,17 +67,17 @@ public class RadialElement extends GuiComponent {
     }
 
     protected boolean calculateCenterHover(double mouseRelativeRadius) {
-        if(this.centerIcon!=null) return mouseRelativeRadius<=this.iconRadius;
-        else if(this.centerProgress!=null) return this.centerProgress.getHover();
+        if(Objects.nonNull(this.centerIcon)) return mouseRelativeRadius<=this.iconRadius;
+        else if(Objects.nonNull(this.centerProgress)) return this.centerProgress.getHover();
         return MathUtil.isInCircle(this.center, mouseRelativeRadius, this.radius.x());
     }
 
-    /**
+    /*
         Remember to call this method from your GUI class if you want to be able to click on the buttons here
      */
     public void mousePressed(int mouseX, int mouseY, int mouseButton) {
-        if(mouseButton==0 && this.parentScreen!=null) {
-            if(this.centerProgress!=null) this.centerProgress.handleClick(this.parentScreen,new Vector3f(mouseX,mouseY,0));
+        if(mouseButton==0 && Objects.nonNull(this.parentScreen)) {
+            if(Objects.nonNull(this.centerProgress)) this.centerProgress.handleClick(this.parentScreen,new Vector3f(mouseX,mouseY,0));
             for (RadialButton button : this.buttons)
                 button.handleClick(this.parentScreen);
         }
@@ -89,7 +87,7 @@ public class RadialElement extends GuiComponent {
         matrix.pushPose();
         RenderSystem.enableBlend();
         RenderSystem.disableTexture();
-        RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
+        RenderSystem.setShaderColor(1f,1f,1f,1f);
         Vector3f mouse = new Vector3f(mouseX,mouseY,0);
         double mouseAngleDeg = MathUtil.getAngle(mouse, this.center);
         double mouseRelativeRadius = MathUtil.distance(mouse, this.center);
@@ -135,7 +133,7 @@ public class RadialElement extends GuiComponent {
     private void drawIcons(PoseStack matrix, Vector3f center, Vector3f radius, boolean hasOneButton) {
         RenderSystem.enableTexture();
         RenderSystem.defaultBlendFunc();
-        if(this.centerIcon!=null) {
+        if(Objects.nonNull(this.centerIcon)) {
             ResourceLocation actualIcon = this.centerIcon;
             int hoverIncrease = 0;
             if(this.centerHover) {
@@ -149,7 +147,7 @@ public class RadialElement extends GuiComponent {
     }
 
     private void drawCenterProgress(Vector3f center, float offset, boolean currentScreen) {
-        if(this.centerProgress!=null) {
+        if(Objects.nonNull(this.centerProgress)) {
             if(currentScreen) this.centerProgress.setHover(this.centerHover);
             else this.centerProgress.setHover(false);
             this.centerProgress.draw(this.center,offset);
@@ -157,8 +155,8 @@ public class RadialElement extends GuiComponent {
     }
 
     private void drawText(PoseStack matrix, Vector3f mouse, double mouseRelativeRadius, boolean isCurrent) {
-        if(this.parentScreen!=null) {
-            if (this.centerText != null) {
+        if(Objects.nonNull(this.parentScreen)) {
+            if (Objects.nonNull(this.centerText)) {
                 int color = this.centerHover ? 16777120 : 14737632;
                 drawCenteredString(matrix, Minecraft.getInstance().font, this.centerText,(int) this.center.x(),
                         (int) this.center.y(), color);
